# imagine-daggers-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2019-06-21-225904_create_users/: up.sql
migrations/2019-08-10-203929_create_account/: up.sql
migrations/2019-09-02-040214_add_user_column_activation_bool/: down.sql  up.sql
src/: main.rs  models.rs  routes.rs  schema.rs
src/views/: package-lock.json  package.json
src/views/components/: layout.js
src/views/pages/: index.js
views/: package.json
views/components/: collapsibleItem.js
