[package]
name = "imagine-daggers"
version = "0.1.0"
authors = ["Zachary E Sohovich <zacharyesohovich@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.2"

bytes = "0.4"
env_logger = "0.6"
futures = "0.1"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.14.1"
bcrypt = "0.4"