[package]
name = "imagine-daggers"
version = "0.1.0"
authors = ["Zachary E Sohovich <zach@sneakycrow.dev>"]
edition = "2018"

[dependencies]
actix-web = { version = "1.0.5", features = ["ssl"] }
actix-rt = "0.2.4"
actix-cors = "0.1.0"
json = "0.11.14"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.6.2"
futures = "0.1.28"
dotenv = "0.14.1"
serde_json = "1.0.40"
openssl-probe = "0.1.2"
diesel = { version = "1.4.2", features = ["postgres", "r2d2"] }
uuid = { version = "0.7.4", features = ["serde", "v4"] }
r2d2 = "0.8.5"
bcrypt = "0.5.0"